--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:layout_gravity="center_horizontal"
         android:textColor="@color/design_default_color_primary"
         android:textSize="30sp"
+        android:id="@+id/result_text"
         android:text="HelloKotlin!" />
 
     <Button
