--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,13 @@
         android:id="@+id/result_text"
         android:text="HelloKotlin!" />
 
+    <ImageView
+        android:id="@+id/dice_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:src="@drawable/dice_1" />
+
     <Button
         android:id="@+id/roll_button"
         android:layout_width="wrap_content"
